--- a/.github/workflows/publish_image.yml
+++ b/.github/workflows/publish_image.yml
@@ -28,7 +28,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       with:
-        images: mdouglas/pixlet-push
+        images: coominpickle/pixlet-push-update
 
     - name: Build and push Docker images
       uses: docker/build-push-action@v3.0.0
