--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,38 +1,29 @@
-name: Docker Image CI
+name: Build and push Docker image
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:  # Add this line for manual trigger
+    branches:
+      - main
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag coominpickle/pixlet-push-update:$(date +%s)
-
-    - name: Push the Docker image to Docker Hub
-      run: docker push coominpickle/pixlet-push-update:$(date +%s)
-
-    - name: Tag latest image
-      run: |
-        docker tag coominpickle/pixlet-push-update:$(date +%s) coominpickle/pixlet-push-update:latest
-        docker push coominpickle/pixlet-push-update:latest
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: coominpickle/pixlet-push-update:latest
